# warp-ctc

./: CMakeLists.txt
include/: ctc.h
include/detail/: cpu_ctc.h
pytorch_binding/: setup.py
pytorch_binding/bfctc_pytorch/: __init__.py
pytorch_binding/src/: binding.cpp  cpu_binding.h
pytorch_binding/tests/: test_cpu.py
pytorch_binding/warpctc_pytorch/: __init__.py
src/: ctc_entrypoint.cpp
tests/: test_cpu.cpp
